--- a/src/pages/CadenceActionList.page
+++ b/src/pages/CadenceActionList.page
@@ -5,9 +5,9 @@
     <div id="myDivId9" />
     <script>
         var myUserContext = "{!$User.UITheme}";
-        $Lightning.use("RDNACadence2:CadenceActionListApp", function() {
+        $Lightning.use("c:CadenceActionListApp", function() {
         $Lightning.createComponent(
-            "RDNACadence2:CadenceActionList",
+            "c:CadenceActionList",
             {themeName: myUserContext},
             "myDivId9",
             function(cmp) {
