--- a/src/aura/Datatable/Datatable.cmp
+++ b/src/aura/Datatable/Datatable.cmp
@@ -36,7 +36,7 @@
                     <p class="rdna-text">Leads and contacts will automatically be added to your today view based on sequence actions.</p>
                 </p></div>
             <aura:set attribute="else">
-                <a<aura:if  isTrue="{!and(empty(v.rawData), v.isTodayListView)}" >
+                <aura:if  isTrue="{!and(empty(v.rawData), v.isTodayListView)}" >
                 <!--<aura:if isTrue = "{!empty(v.rawData)}">-->
                     <div class="slds-align_absolute-center " style="height: 300px;background-color:white">
                         <p class="rdna-text-style">Sorry, We couldn't find any results with that name.</p>
