Code committed for test class, namespace, and new dev bugs.

--- a/src/pages/ActionDetailView.page
+++ b/src/pages/ActionDetailView.page
@@ -8,9 +8,9 @@
     <div id="myDivId2" />
     <script>
         var myUserContext = "{!$User.UITheme}";
-        $Lightning.use("c:CadenceActionListApp", function() {
+        $Lightning.use("RDNACadence:CadenceActionListApp", function() {
             $Lightning.createComponent(
-                "c:ActionDetailView",
+                "RDNACadence:ActionDetailView",
                 {recordId: '{!$CurrentPage.parameters.id}',themeName: myUserContext},
                 "myDivId2",
                 function(cmp) {
