--- a/src/pages/CadenceListView.page
+++ b/src/pages/CadenceListView.page
@@ -5,9 +5,9 @@
     <div id="myDivId" />
     <script>
         var myUserContext = "{!$User.UITheme}";
-    	$Lightning.use("c:CadenceActionListApp", function() {
+    	$Lightning.use("RDNACadence:CadenceActionListApp", function() {
         	$Lightning.createComponent(
-            	"c:CadenceListView",
+            	"RDNACadence:CadenceListView",
             	{themeName: myUserContext},
             	"myDivId",
             	function(cmp) {
