Remove namespace dependencies from classic support

--- a/src/pages/ActionDetailView.page
+++ b/src/pages/ActionDetailView.page
@@ -1,4 +1,4 @@
-<apex:page standardcontroller="Action__c" sidebar="false" showHeader="true" tabStyle="Cadence_Actions_Classic__tab">
+<apex:page standardcontroller="Action__c" extensions="GetNamespace" sidebar="false" showHeader="true" tabStyle="Cadence_Actions_Classic__tab">
 <style type="text/css">        
         .rdna-pageSelect { height: 27px !important; width: 62px !important;  border-radius: 6px !important; border-color: #cccccc !important;} 
         .rdna-classic-datatableStyling {padding-right: 6px !important;}
@@ -8,9 +8,9 @@
     <div id="myDivId2" />
     <script>
         var myUserContext = "{!$User.UITheme}";
-        $Lightning.use("RDNACadence:CadenceActionListApp", function() {
+        $Lightning.use("{!namespace}:CadenceActionListApp", function() {
             $Lightning.createComponent(
-                "RDNACadence:ActionDetailView",
+                "{!namespace}:ActionDetailView",
                 {recordId: '{!$CurrentPage.parameters.id}',themeName: myUserContext},
                 "myDivId2",
                 function(cmp) {
