--- a/src/pages/CadenceListView.page
+++ b/src/pages/CadenceListView.page
@@ -1,13 +1,13 @@
-<apex:page sidebar="false" showHeader="true" >
+<apex:page controller="GetNamespace" sidebar="false" showHeader="true" >
     <script src="/lightning/lightning.out.js"/> 
 	<apex:slds />
     <apex:includeLightning />
     <div id="myDivId" />
     <script>
         var myUserContext = "{!$User.UITheme}";
-    	$Lightning.use("RDNACadence:CadenceActionListApp", function() {
+    	$Lightning.use("{!namespace}:CadenceActionListApp", function() {
         	$Lightning.createComponent(
-            	"RDNACadence:CadenceListView",
+            	"{!namespace}:CadenceListView",
             	{themeName: myUserContext},
             	"myDivId",
             	function(cmp) {
