--- a/src/pages/Cadence.page
+++ b/src/pages/Cadence.page
@@ -1,4 +1,4 @@
-<apex:page standardcontroller="Cadence__c" sidebar="false"  tabStyle="Cadence_Classic__tab" showHeader="true">
+<apex:page standardcontroller="Cadence__c" extensions="GetNamespace" sidebar="false"  tabStyle="Cadence_Classic__tab" showHeader="true">
     <style type="text/css">
     .slds-button__icon_x-small { width: 0px !important; height: 0px !important;}
 	.rdna-pageSelect { height: 27px !important; width: 62px !important;  border-radius: 6px !important; border-color: #cccccc !important;} 
@@ -10,9 +10,9 @@
     <script>
     	var myUserContext = "{!$User.UITheme}";
     	var iseditVar = '{!$CurrentPage.parameters.isedit}' != undefined ? '{!$CurrentPage.parameters.isedit}':false;
-        $Lightning.use("RDNACadence:CadenceActionListApp", function() {
+        $Lightning.use("{!namespace}:CadenceActionListApp", function() {
             $Lightning.createComponent(
-                "RDNACadence:CadenceComponent",
+                "{!namespace}:CadenceComponent",
                 {recordId: '{!$CurrentPage.parameters.id}',themeName: myUserContext,isEdit : iseditVar},
                 "myDivId4",
                 function(cmp) {
