--- a/src/aura/CadenceProgressIndicator/CadenceProgressIndicator.cmp
+++ b/src/aura/CadenceProgressIndicator/CadenceProgressIndicator.cmp
@@ -13,13 +13,13 @@
     <aura:attribute name="dbFieldList" type="List"/>
     <aura:attribute name="recordId" type="String" description="" />
     <aura:attribute name="AllFieldList" type="List"/>
-    
     <!--Create or show cadence details -->
     <aura:attribute name= "isEdit" type="Boolean" default= "false"/>
-    
     <!--Regenter event -->
     <aura:registerEvent name="CadenceComponentSaveEvt" type="c:CadenceComponentEvt"/> 
     <!--Cadence Objects -->
+    <!-- Save Buuton disable-->
+    <aura:attribute name="SaveDisable" type="Boolean" default= "false"/>
     <aura:attribute name="newCadence" type="Sequence" />
     <!-- CadenceAction Id list to delete cadenceActions -->
     <aura:attribute name="caIdsList" type="List"/>
@@ -49,7 +49,10 @@
             </aura:if>
             <aura:if isTrue="{!v.currentStep == '4'}">
                 <div>
-                    <button class="slds-button slds-button_neutral rdna-button rdna-button-text slds-m-top_large slds-m-right_medium slds-p-right_large" onclick="{!c.save}" >Save</button>
+                    <button class="slds-button slds-button_neutral rdna-button rdna-button-text slds-m-top_large slds-m-right_medium slds-p-right_large" onclick="{!c.save}" disabled="{!v.SaveDisable}"  aura:id="saveButton">Save</button>
+                     
+                    
+                       
                 </div>
             </aura:if>
         </div>
