Improvements of spinner on data load at following places: 1) From record type list to on Next click 2) From 4th tab (Sequence Action)

--- a/src/aura/CadenceActions/CadenceActions.cmp
+++ b/src/aura/CadenceActions/CadenceActions.cmp
@@ -40,7 +40,7 @@
     <aura:attribute name= "createAction" type="boolean" default="false"/>
     <aura:attribute name="ISLoad" type="boolean" default="false"/>
     <aura:attribute name="UpdateFieldList" type="List"/>
-    
+    <aura:attribute name= "actionWrapper" type="List"/>
     <c:SpinnerComponent spinnerSync = "{!v.spinner}"/>
     <div class = "slds-m-left_large">
         <div class = "slds-form-element slds-size_1-of-1  slds-m-bottom_large slds-m-top_medium " aura:id = "createTaskdiv">
