SFDC-462:Not able to add Task type action via Add new action within sequence as fields drop down not populated

--- a/src/aura/CadenceActions/CadenceActions.cmp
+++ b/src/aura/CadenceActions/CadenceActions.cmp
@@ -126,7 +126,7 @@
             </div>
         </aura:if>
         <aura:if isTrue="{!v.createAction}">
-            <c:DynamicActionDetails aura:id="dynamicActionId" createAction="{!v.createAction}" actionTypeList="{!v.actionTypeList}" actionList ="{!v.actionList}" UpdateFieldList="{!v.UpdateFieldList}" />
+            <c:DynamicActionDetails aura:id="dynamicActionId" createAction="{!v.createAction}" actionTypeList="{!v.actionTypeList}" actionList ="{!v.actionList}" />
         </aura:if>
     </div>
 </aura:component>
