--- a/src/aura/CadenceActions/CadenceActions.cmp
+++ b/src/aura/CadenceActions/CadenceActions.cmp
@@ -36,12 +36,12 @@
     <!-- CadenceAction Id list to delete cadenceActions -->
     <aura:attribute name="caIdsList" type="List"/>
     <!--create a component attributs -->
-    <aura:attribute name="spinner" type="boolean" default="false"/>
+    <aura:attribute name="spinner" type="boolean"/>
     <aura:attribute name= "createAction" type="boolean" default="false"/>
     <aura:attribute name="ISLoad" type="boolean" default="false"/>
     <aura:attribute name="UpdateFieldList" type="List"/>
     <aura:attribute name= "actionWrapper" type="List"/>
-    <c:SpinnerComponent spinnerSync = "{!v.spinner}"/>
+    
     <div class = "slds-m-left_large">
         <div class = "slds-form-element slds-size_1-of-1  slds-m-bottom_large slds-m-top_medium " aura:id = "createTaskdiv">
             <p class="slds-page-header__row slds-truncate rdna-sub-header-bold slds-align_absolute-center" >Sequence Actions</p>
